--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
   "name": "gatsby-source-strava",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "Gatsby plugin to use Strava as a data source",
   "repository": "https://github.com/xuopled/gatsby-source-strava",
   "author": "Cédric Delpoux",
   "license": "MIT",
   "private": false,
-  "keywords": ["gatsby", "gatsby-plugin", "gatsby-source", "strava"],
+  "keywords": [
+    "gatsby",
+    "gatsby-plugin",
+    "gatsby-source",
+    "strava"
+  ],
   "main": "index.js",
   "dependencies": {
-    "bluebird": "^3.5.1",
-    "gatsby": ">2.0.0-alpha",
-    "strava-v3": "^1.14.0"
+    "gatsby": "^2.0.0",
+    "strava-v3": "^1.14.0",
+    "system-sleep": "^1.3.6"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -19,12 +24,12 @@
     "cross-env": "^5.1.5",
     "eslint": "^5.3.0",
     "eslint-config-prettier": "^3.0.1",
-    "husky": "^1.0.0-rc.13",
+    "husky": "^1.0.0",
     "lint-staged": "^7.2.2",
     "prettier": "1.14.2"
   },
   "peerDependencies": {
-    "gatsby": ">2.0.0-alpha"
+    "gatsby": "^2.0.0"
   },
   "scripts": {
     "build": "cross-env BABEL_ENV=production babel src --out-dir .",
