--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gatsby-source-strava",
-  "version": "1.4.1",
+  "version": "2.0.0-beta.3",
   "description": "Gatsby plugin to use Strava as a data source",
   "repository": "https://github.com/xuopled/gatsby-source-strava",
   "author": "Cédric Delpoux",
@@ -14,18 +14,19 @@
   ],
   "main": "index.js",
   "dependencies": {
-    "strava-v3": "^1.14.0",
+    "inquirer": "^7.0.4",
+    "strava-v3": "^2.0.3",
     "system-sleep": "^1.3.6"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "cross-env": "^5.1.5",
-    "eslint": "^5.3.0",
-    "eslint-config-prettier": "^3.0.1",
-    "husky": "^1.0.0",
-    "lint-staged": "^7.2.2",
-    "prettier": "1.14.2"
+    "cross-env": "^7.0.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
+    "husky": "^4.2.1",
+    "lint-staged": "^10.0.4",
+    "prettier": "1.19.1"
   },
   "peerDependencies": {
     "gatsby": "^2.0.0"
@@ -33,7 +34,11 @@
   "scripts": {
     "build": "cross-env BABEL_ENV=production babel src --out-dir .",
     "lint": "eslint --ext .js src",
-    "prepublishOnly": "yarn build"
+    "prepublishOnly": "yarn build",
+    "token": "./scripts/generate-token.js "
+  },
+  "bin": {
+    "gatsby-source-strava-token": "./scripts/generate-token.js"
   },
   "husky": {
     "hooks": {
