--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gatsby-source-strava",
-  "version": "2.0.0-beta.8",
+  "version": "2.0.0-beta.9",
   "description": "Gatsby plugin to use Strava as a data source",
   "repository": "https://github.com/xuopled/gatsby-source-strava",
   "author": "Cédric Delpoux",
@@ -39,6 +39,14 @@
   },
   "bin": {
     "gatsby-source-strava-token": "./scripts/generate-token.js"
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint"
+    ],
+    "*.{css,js,md}": [
+      "prettier --write"
+    ]
   },
   "husky": {
     "hooks": {
