--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gatsby-source-strava",
-  "version": "2.0.0-beta.9",
+  "version": "2.0.0-beta.10",
   "description": "Gatsby plugin to use Strava as a data source",
   "repository": "https://github.com/xuopled/gatsby-source-strava",
   "author": "Cédric Delpoux",
@@ -14,6 +14,7 @@
   ],
   "main": "index.js",
   "dependencies": {
+    "glob": "^7.1.6",
     "inquirer": "^7.0.6",
     "strava-v3": "^2.0.5",
     "system-sleep": "^1.3.6"
