--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   ],
   "main": "index.js",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "glob": "^7.1.6",
     "inquirer": "^7.0.6",
     "strava-v3": "^2.0.5",
