--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gatsby-source-strava",
   "version": "2.0.0-beta.11",
   "description": "Gatsby plugin to use Strava as a data source",
-  "repository": "https://github.com/xuopled/gatsby-source-strava",
+  "repository": "https://github.com/cedricdelpoux/gatsby-source-strava",
   "author": "Cédric Delpoux",
   "license": "MIT",
   "private": false,
@@ -14,32 +14,29 @@
   ],
   "main": "index.js",
   "dependencies": {
+    "express": "^4.17.1",
     "glob": "^7.1.6",
-    "inquirer": "^7.0.6",
-    "strava-v3": "^2.0.5",
+    "inquirer": "^7.3.3",
+    "open": "^7.2.1",
+    "strava-v3": "^2.0.6",
     "system-sleep": "^1.3.6"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "cross-env": "^7.0.2",
-    "eslint": "^6.8.0",
+    "eslint": "^7.9.0",
     "eslint-config-prettier": "^6.10.0",
-    "husky": "^4.2.3",
-    "lint-staged": "^10.0.8",
-    "prettier": "1.19.1"
+    "husky": "^4.3.0",
+    "lint-staged": "^10.4.0",
+    "prettier": "2.1.2"
   },
   "peerDependencies": {
     "gatsby": "^2.0.0"
   },
   "scripts": {
-    "build": "cross-env BABEL_ENV=production babel src --out-dir .",
-    "lint": "eslint --ext .js src",
-    "prepublishOnly": "yarn build",
-    "token": "./scripts/generate-token.js "
+    "lint": "eslint gatsby-node.js utils example",
+    "prepublishOnly": "yarn lint"
   },
   "bin": {
-    "gatsby-source-strava-token": "./scripts/generate-token.js"
+    "gatsby-source-strava-token": "./utils/generate-token.js"
   },
   "lint-staged": {
     "*.js": [
