--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "prettier": "2.2.1"
   },
   "peerDependencies": {
-    "gatsby": "^2.0.0"
+    "gatsby": "^2.0.0 || ^3.0.0"
   },
   "scripts": {
     "lint": "eslint gatsby-node.js utils example",
