--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gatsby-source-strava",
-  "version": "2.0.0-beta.12",
+  "version": "2.0.0",
   "description": "Gatsby plugin to use Strava as a data source",
   "repository": "https://github.com/cedricdelpoux/gatsby-source-strava",
   "author": "Cédric Delpoux",
