--- a/example/package.json
+++ b/example/package.json
@@ -10,12 +10,12 @@
   },
   "dependencies": {
     "dotenv": "^8.2.0",
-    "gatsby": "^2.24.41",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "gatsby": "^4.1.4",
+    "react": "link:../node_modules/react",
+    "react-dom": "link:../node_modules/react-dom"
   },
   "devDependencies": {
-    "eslint-plugin-react": "^7.20.6",
-    "prettier": "2.0.5"
+    "eslint-plugin-react": "^7.27.0",
+    "prettier": "2.4.1"
   }
 }
