--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gatsby-source-strava",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "description": "Gatsby plugin to use Strava as a data source",
   "repository": "https://github.com/cedricdelpoux/gatsby-source-strava",
   "author": "Cédric Delpoux",
@@ -26,10 +26,12 @@
     "eslint-config-prettier": "^8.3.0",
     "husky": "^4.3.0",
     "lint-staged": "^11.2.6",
-    "prettier": "2.4.1"
+    "prettier": "2.4.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "peerDependencies": {
-    "gatsby": "^2.0.0 || ^3.0.0"
+    "gatsby": "^3.0.0 || ^4.0.0"
   },
   "scripts": {
     "lint": "eslint gatsby-node.js utils example",
