--- a/example/package.json
+++ b/example/package.json
@@ -10,12 +10,12 @@
   },
   "dependencies": {
     "dotenv": "^8.2.0",
-    "gatsby": "^4.1.4",
+    "gatsby": "5.14.0",
     "react": "link:../node_modules/react",
     "react-dom": "link:../node_modules/react-dom"
   },
   "devDependencies": {
-    "eslint-plugin-react": "^7.27.0",
-    "prettier": "2.4.1"
+    "eslint-plugin-react": "^7.37.2",
+    "prettier": "3.4.1"
   }
 }
