--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "docs"
   ],
   "dependencies": {
-    "express": "^4.17.1",
+    "express": "^4.21.2",
     "glob": "^7.2.0",
     "inquirer": "^8.2.0",
     "open": "^8.4.0",
-    "strava-v3": "^2.0.10",
+    "strava-v3": "^2.2.1",
     "system-sleep": "^1.3.6"
   },
   "devDependencies": {
@@ -32,11 +32,11 @@
     "husky": "^4.3.0",
     "lint-staged": "^11.2.6",
     "prettier": "2.4.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "peerDependencies": {
-    "gatsby": "^3.0.0 || ^4.0.0"
+    "gatsby": ">=3.0.0"
   },
   "scripts": {
     "lint": "eslint *.js gatsby-node.js utils example/src",
