--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "docs"
   ],
   "dependencies": {
+    "@mapbox/polyline": "^1.2.1",
     "express": "^4.21.2",
     "glob": "^7.2.0",
     "inquirer": "^8.2.0",
